# WebSAGE

./: GO-icewall  GO-icewallAN  GO-icewallJA  GO-icewallKB  GO-icewallRightAN  GO-icewallTM  GO-iridium  GO-iridiumX  GO-lyra  GO-thor  README.md  STOP-iridium  audioManager.html  audioManager2.html  dropboxApp.json  index.html  index.html~  index2.html  package.json  package.json~  sagePointer.html  sagePointerApp.html  sageUI.html  server.js  server.js~  server2.js  style.css  style_mgr.css  style_pointer.css  windowManager.html  windowManager2.html
GO-scripts/: GO-icewallJA  GO-iridium  GO-lyra  GO-mac.sh
apps/: Makefile  processingGuide.html
apps/histogram/: histogram.html
apps/linePlot/: data.txt  fakeData.txt  histogram.html  linePlot.html  test.html
apps/map/: chicagoMap.html  communityBoundaries.txt
apps/metadataDisplay/: metadataDisplay.html
apps/organize/: controlPanel.organize  organizationControlPanel.html
apps/pdf/: instructions.json  pdf.js
apps/processingDemo/: processingDemo.html
apps/processingTest2/: processingTest2.html
apps/ptrTest/: ptrTest.html
apps/sageScript/: sageScript.html  script1.sageScript
config/: desktop-cfg.json  desktop-omicron-cfg.json  icewall-cfg.json  icewallAN-cfg.json  icewallJA-cfg.json  icewallKB-cfg.json  icewallRight-cfg.json  icewallRight-omicron-cfg.json  icewallTM-cfg.json  iridium-cfg.json  iridiumX-cfg.json  luc-cfg.json  lyra-cfg.json  lyraX-cfg.json  thor-cfg.json  tmarrinan-cfg.json
keys/: GO  GO-linux  GO-mac  GO-windows.bat  GO.bat  README.txt  ca.crt  ca.csr  ca.key  certificate.pem  certrequest.csr  dante.evl.uic.edu-ca.crt  dante.evl.uic.edu-server.crt  dante.evl.uic.edu-server.key  evl-77dhcp235.evl.uic.edu-ca.crt  evl-77dhcp235.evl.uic.edu-server.crt  evl-77dhcp235.evl.uic.edu-server.key  init_webserver.bat  init_webserver.cmd  init_webserver.sh  iridium.evl.optiputer.net-ca.crt  iridium.evl.optiputer.net-server.crt  iridium.evl.optiputer.net-server.key  iridium.evl.uic.edu-ca.crt  iridium.evl.uic.edu-server.crt  iridium.evl.uic.edu-server.key  localhost-ca.crt  localhost-server.crt  localhost-server.key  lyra.evl.optiputer.net-ca.crt  lyra.evl.optiputer.net-server.crt  lyra.evl.optiputer.net-server.key  lyra.evl.uic.edu-ca.crt  lyra.evl.uic.edu-server.crt  lyra.evl.uic.edu-server.key  privatekey.pem  server.crt  server.csr  server.key  server.key.org  (+6 more)
lib/: websocket.io.js
public_HTTP/: index.html  style.css
public_HTTPS/: audioManager.html  index.html  sagePointerApp.html  sageUI.html  style.css  style_audio.css  style_mgr.css
public_HTTPS/lib/: Class.js  SAGE2_App.js  image_viewer.js  media_stream.js  movie_player.js  pdf_viewer.js  websocket.io.js
public_HTTPS/scripts/: pdf.worker.js  pdf_canvas.js  sagePointer.js  videoControls.js
public_HTTPS/uploads/apps/clock/: clock.js  instructions.json
scripts/: ._clock.js  clock.js  pdf.js  pdf.worker.js  pdf_canvas.js  pointer.js  sageApp.js  webrtc.io.js  widgets.js  windowManager.js
uploads/: bounce.js  clock.js  pointer.js
uploads/apps/clock/: clock.js
uploads/apps/googlemaps/: googlemaps.js  instructions.json
uploads/apps/wallMenuUI/: instructions.json  wallMenuUI.js
webBrowser/awesomium/: CMakeLists.txt  webBrowser.cpp  webBrowser.py
webBrowser/awesomium/cmake/Modules/: FindAwesomium.cmake
webBrowser/cef/: CMakeLists.txt  webBrowser.cpp  webBrowser.py
webBrowser/cef/Resources/: cef.pak  devtools_resources.pak
webBrowser/cef/Resources/locales/: am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  ru.pak  sk.pak  sl.pak  (+11 more)
webBrowser/old/: cefBrowser.py  client.cpp  client.h  compile.sh  kivy_.py  pythonWrapper.cpp  webBrowser.py  wxpython.py
